--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div>
-		<p>What is all the fuss about here?</p>
+		<p>OK now I guess this is the real test.</p>
 	</div>
 </body>
 </html>
