Layout_idea_1.html
This is just a sandbox for page layouts

--- a/test.html
+++ b/test.html
@@ -4,8 +4,12 @@
 	<title>Just testing GIT out.</title>
 </head>
 <body>
-	<div>
-		<p>OK now I guess this is the real test.</p>
+	<div id="message_board">
+		<!--LIST OF MESSAGES-->
+		<ul>
+			<li>Message 1</li>
+			<li>Message 2</li>
+		</ul>
 	</div>
 </body>
 </html>
