--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Just testing GIT out.</title>
+	<link rel="stylesheet" type="text/css" href="test.css" />
 </head>
 <body>
 	<div id="message_board">
