--- a/test.html
+++ b/test.html
@@ -7,9 +7,9 @@
 <body>
 	<div id="message_board">
 		<!--LIST OF MESSAGES-->
-		<ul>
-			<li>Message 1</li>
-			<li>Message 2</li>
+		<span class="desc_label">Messages</span>
+		<ul id="error_list">
+			<li>Message 1: <span class="brief_desc">A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a></span></li>
 		</ul>
 	</div>
 </body>
