--- a/test.html
+++ b/test.html
@@ -12,5 +12,8 @@
 			<li>Message 1: <span class="brief_desc">A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a></span></li>
 		</ul>
 	</div>
+	<div id="content">
+		
+	</div>
 </body>
 </html>
