--- a/test.html
+++ b/test.html
@@ -12,8 +12,27 @@
 			<li>Message 1: <span class="brief_desc">A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a></span></li>
 		</ul>
 	</div>
-	<div id="content">
-		
+	<div id="content_shell">
+		<div id="content">
+			<div id="frm_search">
+				<form>
+					<input type="text" value="To add email validator" /><br />
+					<input type="submit" />
+				</form>
+			</div>
+			<div id="lnk_search">
+				<table id="tbl_search_center">
+					<tr>
+						<td>
+							<a class="lnk_search" href="#">Mission</a>
+						</td>
+						<td>
+							<a class="lnk_search" href="#">A thing</a>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>		
 	</div>
 </body>
 </html>
