--- a/test.html
+++ b/test.html
@@ -7,10 +7,43 @@
 <body>
 	<div id="message_board">
 		<!--LIST OF MESSAGES-->
-		<span class="desc_label">Messages</span>
-		<ul id="error_list">
-			<li>Message 1: <span class="brief_desc">A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a></span></li>
-		</ul>
+		<div id="lbl_error_list" class="desc_label">Messages</div>
+		<div id="error_list">	
+			<table id="tbl_error_list">
+				<tr>
+					<td>
+						Message 1:
+					</td>
+					<td class="brief_desc">
+						A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Message 2:
+					</td>
+					<td class="brief_desc">
+						A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Message 3:
+					</td>
+					<td class="brief_desc">
+						A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Message 4:
+					</td>
+					<td class="brief_desc">
+						A short suggestion for a resolution with a <a class="lnk_brief_desc" href="#">link</a>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</div>
 	<div id="content_shell">
 		<div id="content">
