--- a/test.html
+++ b/test.html
@@ -5,6 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="test.css" />
 </head>
 <body>
+	<div id="menu_slide">
+		<table style="min-width:100%;min-height:100%;">	
+			<tr>
+				<td id="menu_button" onclick="document.getElementById('menu_side').innerHTML = _print_login();">
+					<span style="color:WHITE;">HERE</span>
+				</td>	
+			</tr>
+		</table>				
+	</div>
 	<div id="message_board">
 		<!--LIST OF MESSAGES-->
 		<div id="lbl_error_list" class="desc_label">Messages</div>
