--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
 	<div id="menu_slide">
 		<table style="min-width:100%;min-height:100%;">	
 			<tr>
-				<td id="menu_button" onclick="document.getElementById('menu_side').innerHTML = _print_login();">
+				<td id="menu_button" onclick="_wkb_print_login();">
 					<span style="color:WHITE;">HERE</span>
 				</td>	
 			</tr>
