--- a/test.html
+++ b/test.html
@@ -9,14 +9,14 @@
 		<table style="min-width:100%;min-height:100%;">	
 			<tr>
 				<td id="menu_button" onclick="_wkb_print_login();">
-					<span style="color:WHITE;">HERE</span>
+					<span style="color:WHITE;">START HERE</span>
 				</td>	
 			</tr>
 		</table>				
 	</div>
 	<div id="message_board">
 		<!--LIST OF MESSAGES-->
-		<div id="lbl_error_list" class="desc_label">Messages</div>
+		<div id="lbl_error_list" class="desc_label"><div id="lbl_messages">Messages</div></div>
 		<div id="error_list">	
 			<table id="tbl_error_list">
 				<tr>
