--- a/test.html
+++ b/test.html
@@ -58,11 +58,12 @@
 		<div id="content">
 			<div id="frm_search">
 				<form>
-					<input type="text" value="To add email validator" /><br />
+					<label>Enter your emails for updates!<br /></label>
+					<input onclick="document.getElementById('frm_email').value = '';" id="frm_email" type="text" value="To add email validator" /><br />
 					<input type="submit" />
 				</form>
 			</div>
-			<div id="lnk_search">
+			<!--<div id="lnk_search">
 				<table id="tbl_search_center">
 					<tr>
 						<td>
@@ -73,7 +74,7 @@
 						</td>
 					</tr>
 				</table>
-			</div>
+			</div>-->
 		</div>		
 	</div>
 </body>
