--- a/test.html
+++ b/test.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Just testing GIT out.</title>
 	<link rel="stylesheet" type="text/css" href="test.css" />
+	<script src="_wkb_login.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="menu_slide">
