--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 	<div id="menu_slide">
 		<table style="min-width:100%;min-height:100%;">	
 			<tr>
-				<td id="menu_button" onclick="document.getElementById('menu_button').innerHTML = _print_login();">
+				<td id="menu_button" onclick="document.getElementById('menu_slide').innerHTML = _print_login();">
 					<span style="color:WHITE;">START HERE</span>
 				</td>	
 			</tr>
