--- a/test.html
+++ b/test.html
@@ -44,8 +44,9 @@
 		document.getElementById('menu_slide').innerHTML = _print_start_menu(get_screen_name());
 		_message_add("TEST","TESTING");
 		_message_pop();
-
 		if(_message_count()>0)document.getElementById('message_board').innerHTML = _message_print();
+		var test_box = new _box;
+		alert(test_box.shell);
 	</script>
 </body>
 </html>
