--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
 		_message_pop();
 		if(_message_count()>0)document.getElementById('message_board').innerHTML = _message_print();
 		var test_box = new _box;
-		alert(test_box.shell);
+		alert(test_box.get());
 	</script>
 </body>
 </html>
