--- a/test.html
+++ b/test.html
@@ -64,13 +64,13 @@
 		test_box2.onclick 	= true;
 		test_box2.onclickcode 	= "";
 		test_box2.onmousedown	= true;
-		test_box2.onmousedowncode = "";
+		test_box2.onmousedowncode = " mouseFocus = 'test_id2'; ";
 		test_box2.onmousemove	= true;
 		test_box2.onmousemovecode = "";
 		test_box2.onblur  	= true;
 		test_box2.onblurcode 	= "";
 		test_box2.onmouseup  	= true;
-		test_box2.onmouseupcode = "";
+		test_box2.onmouseupcode = " mouseFocus = ''; ";
 		add_menu_item(test_box2,"Google","http://www.google.com");
 		add_menu_item(test_box2,"Yahoo","http://www.yahoo.com");
 		test_box2.content = "SOME GREAT THINGS<br /><br /><div id=\"mouse_value\"></div>";
