--- a/test.html
+++ b/test.html
@@ -48,33 +48,32 @@
 		
 		var test_box = new _box("test_id");
 		var test_box2 = new _box("test_id2");
-
 		test_box.onclick = true;
 		test_box.onclickcode = "";
 		add_menu_item(test_box,"Google","http://www.google.com");
 		add_menu_item(test_box,"Yahoo","http://www.yahoo.com");
-		test_box.content = "SOME GREAT THINGS<br /><br /><div id=\"mouse_value\"></div>";
-		test_box.onmousemove = true;
-		test_box.onmousemovecode = "";
-		test_box.onmousedown = true;
-		test_box.onmousedowncode= "";
-		test_box.position = "relative";
-
-		test_box2.position 	= "relative";
-		test_box2.onclick 	= true;
-		test_box2.onclickcode 	= "";
-		test_box2.onmousedown	= true;
-		test_box2.onmousedowncode = " mouseFocus = 'test_id2'; ";
-		test_box2.onmousemove	= true;
+		test_box.content 	  = "SOME GREAT THINGS<br /><br /><div id=\"mouse_value\"></div>";
+		test_box.onmousemove 	  = true;
+		test_box.onmousemovecode  = "";
+		test_box.onmousedown 	  = true;
+		test_box.onmousedowncode  = " mouseFocus = 'test_id' ";
+		test_box.onmouseup 	  = true;
+		test_box.onmouseupcode 	  = " mouseFocus = ''; ";
+		test_box.position 	  = "relative";
+		test_box2.position 	  = "relative";
+		test_box2.onclick 	  = true;
+		test_box2.onclickcode 	  = "";
+		test_box2.onmousedown	  = true;
+		test_box2.onmousedowncode = " mouseFocus = 'test_id2';";
+		test_box2.onmousemove	  = true;
 		test_box2.onmousemovecode = "";
-		test_box2.onblur  	= true;
-		test_box2.onblurcode 	= "";
-		test_box2.onmouseup  	= true;
-		test_box2.onmouseupcode = " mouseFocus = ''; ";
+		test_box2.onblur  	  = true;
+		test_box2.onblurcode 	  = "";
+		test_box2.onmouseup  	  = true;
+		test_box2.onmouseupcode   = " mouseFocus = ''; ";
 		add_menu_item(test_box2,"Google","http://www.google.com");
 		add_menu_item(test_box2,"Yahoo","http://www.yahoo.com");
 		test_box2.content = "SOME GREAT THINGS<br /><br /><div id=\"mouse_value\"></div>";
-
 		document.getElementById('content_shell').innerHTML = test_box.getbox();
 		document.write(test_box2.getbox());
 	</script>
