--- a/test.html
+++ b/test.html
@@ -56,7 +56,7 @@
 		test_box.onmousemove 	  = true;
 		test_box.onmousemovecode  = "";
 		test_box.onmousedown 	  = true;
-		test_box.onmousedowncode  = " mouseFocus = 'test_id' ";
+		test_box.onmousedowncode  = " mouseFocus = 'test_id';";
 		test_box.onmouseup 	  = true;
 		test_box.onmouseupcode 	  = " mouseFocus = ''; ";
 		test_box.position 	  = "relative";
