--- a/test.html
+++ b/test.html
@@ -76,6 +76,9 @@
 		test_box2.content = "SOME GREAT THINGS<br /><br /><div id=\"mouse_value\"></div>";
 		document.getElementById('content_shell').innerHTML = test_box.getbox();
 		document.write(test_box2.getbox());
+
+		_box_setZ(test_box,3);
+		_box_setZ(test_box2,3);
 	</script>
 </body>
 </html>
