--- a/test.html
+++ b/test.html
@@ -77,6 +77,7 @@
 		test_box2.onblurcode 	  += "";
 		test_box2.onmouseup  	  = true;
 		test_box2.onmouseupcode   += "";
+		test_box2.menu		  = true;
 		add_menu_item(test_box2,"Google","http://www.google.com");
 		add_menu_item(test_box2,"Yahoo","http://www.yahoo.com");
 		var test_box3 = new _box("test_id3");
@@ -91,6 +92,7 @@
 		test_box3.onblurcode 	  = "";
 		test_box3.onmouseup  	  = true;
 		test_box3.onmouseupcode   = " mouseFocus = ''; mouseFunction = NO_ACTION; ";
+		test_box3.menu		  = true;
 		add_menu_item(test_box3,"Google","http://www.google.com");
 		add_menu_item(test_box3,"Yahoo","http://www.yahoo.com");
 add_menu_item(test_box3,"Yahoo","http://www.yahoo.com");
